--- a/public/app/partials/my/wishlist.html
+++ b/public/app/partials/my/wishlist.html
@@ -1,5 +1,5 @@
 <div class="page-wrap">
-	<div class="page-body"> 	
+	<div class="page-body" ng-if="arrWishlists">
 		<div class="row">
 			<div class="col-md-12"> 
 				<div class="product-card-list" ng-repeat="objWish in arrWishlists">
@@ -19,6 +19,14 @@
 						</p>
 					</div>
 				</div> 
+			</div>
+		</div>
+	</div>
+
+	<div class="page-body" ng-if="!arrWishlists">
+		<div class="row">
+			<div class="col-md-12">
+				<h4 class="whitebox">No products found.</h4>
 			</div>
 		</div>
 	</div>
