lazyloading wishlist page

--- a/public/app/partials/my/wishlist.html
+++ b/public/app/partials/my/wishlist.html
@@ -1,6 +1,6 @@
 <div class="page-wrap">
 	<div class="page-body" ng-if="arrWishlists">
-		<div class="row">
+		<div class="row" id="wishlistProducts">
 			<div class="col-md-12"> 
 				<div class="product-card-list" ng-repeat="objWish in arrWishlists">
 					<div class="product-image">
