--- a/public/app/partials/products/view.html
+++ b/public/app/partials/products/view.html
@@ -18,9 +18,9 @@
 				<div class="productview-addtocart"> 
 					<div class="input-group input-group-sm mb5">
 						<input type="number" min="1" value="1" class="form-control text-center">
-						<span class="input-group-addon">x Php <strong>{{objProduct.price}}</strong></span>
+						<span class="input-group-addon">x Php <strong>{{objProduct.price | currency:"":0}}</strong></span>
 					</div>
-					<input type="submit" value="Add to Cart" class="btn btn-primary btn-block mb10">
+					<input type="submit" value="Add to Cart" class="btn btn-primary btn-block mb10" ng-click="addToCart(objProduct)">
 					<p class="text-center m0 mb10">or</p>
 					<p class="m0"><a href="#" class="btn btn-xs btn-block btn-default" ng-if="!isProductWishlisted" ng-click="addToWishlist(objProduct._id)">Add to Wishist</a></p>
 					<p class="m0"><a href="#" class="btn btn-xs btn-block btn-warning" ng-if="isProductWishlisted" ng-click="removeFromWishlist(objProduct._id)">Remove from Wishist</a></p>
@@ -40,7 +40,7 @@
 							<span class="productview-related-name">{{objRelated.name}}</span>
 							<span class="productview-related-meta clearfix show">
 								0 Reviews
-								<span class="pull-right">Php {{objRelated.price}}</span>
+								<span class="pull-right">Php {{objRelated.price | currency:"":0}}</span>
 							</span>
 						</a>
 					</div> 
