--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,7 @@ html(ng-app='starterApp')
         link(rel='stylesheet', href='/assets/stylesheets/font-awesome.min.css')
         link(rel='stylesheet', href='/assets/stylesheets/styles.css')
         link(rel='stylesheet', href='/assets/stylesheets/misc.css')
+        link(rel='stylesheet', href='/assets/stylesheets/animations.css')
         script(src='/assets/javascript/lodash.js')
         script(src='/assets/javascript/jquery-1.12.3.min.js')
         script(src='/assets/javascript/chosen.jquery.min.js')
