--- a/public/app/partials/my/cart.html
+++ b/public/app/partials/my/cart.html
@@ -71,7 +71,7 @@
 								</select>
 							</div>
 							<div class="col-sm-4">
-								<input type="submit" value="Submit This Order" class="btn-sm btn btn-primary btn-block">
+								<input type="submit" value="Submit This Cart" class="btn-sm btn btn-primary btn-block">
 							</div>
 						</div>
 					</div>
@@ -146,7 +146,7 @@
 								</select>
 							</div>
 							<div class="col-sm-4">
-								<input type="submit" value="Submit This Order" class="btn-sm btn btn-primary btn-block">
+								<input type="submit" value="Submit This Cart" class="btn-sm btn btn-primary btn-block">
 							</div>
 						</div>
 					</div>
