--- a/public/app/partials/my/cart.html
+++ b/public/app/partials/my/cart.html
@@ -2,60 +2,32 @@
 	<div class="page-body"> 	
 		<div class="row">
 			<div class="col-md-12"> 
-				<div class="cart-card">
+				<div class="cart-card" ng-repeat="(key,objCart) in objCartlist">
 					<div class="cart-head"> 
 						<table>
 							<tr>
 								<td class="cart-head-img"><img src="/temp/carthtml/images/1.jpg"></td>
-								<td class="cart-head-name">This is 7-11 Cool Store</td>
+								<td class="cart-head-name">{{objCart[0].store.name}}</td>
 								<td class="cart-head-price">Total : Php 12,000.00</td>
 							</tr>
 						</table>
 					</div>
 					<div class="cart-body">
 						<table class="table">
-							<tr>
+							<tr ng-repeat="cartItem in objCart">
 								<td class="cart-prod-img">
 									<img src="/temp/carthtml/images/1.jpg">
 								</td>
-								<td class="cart-prod-name">This is a product name</td>
+								<td class="cart-prod-name">{{cartItem.name}}</td>
 								<td class="cart-prod-qty">
 									<div class="input-group input-group-sm">
 										<input type="number" min="1" value="1" class="form-control">
-										<span class="input-group-addon">x Php 120</span>
+										<span class="input-group-addon">x Php {{cartItem.price | currency:"":0}}</span>
 									</div>
 								</td>
-								<td class="cart-prod-total">Php 1,000.00</td>
+								<td class="cart-prod-total">Php {{cartItem.price | currency:"":0}}</td>
 								<td class="cart-prod-remove"><a>x</a></td>
-							</tr>
-							<tr>
-								<td class="cart-prod-img">
-									<img src="/temp/carthtml/images/1.jpg">
-								</td>
-								<td class="cart-prod-name">This is a product name</td>
-								<td class="cart-prod-qty">
-									<div class="input-group input-group-sm">
-										<input type="number" min="1" value="1" class="form-control">
-										<span class="input-group-addon">x Php 120</span>
-									</div>
-								</td>
-								<td class="cart-prod-total">Php 1,000.00</td>
-								<td class="cart-prod-remove"><a>x</a></td>
-							</tr>
-							<tr>
-								<td class="cart-prod-img">
-									<img src="/temp/carthtml/images/1.jpg">
-								</td>
-								<td class="cart-prod-name">This is a product name</td>
-								<td class="cart-prod-qty">
-									<div class="input-group input-group-sm">
-										<input type="number" min="1" value="1" class="form-control">
-										<span class="input-group-addon">x Php 120</span>
-									</div>
-								</td>
-								<td class="cart-prod-total">Php 1,000.00</td>
-								<td class="cart-prod-remove"><a>x</a></td>
-							</tr>
+							</tr> 
 						</table>
 					</div>
 					<div class="cart-foot">
@@ -77,7 +49,7 @@
 					</div>
 				</div>
 
-				<div class="cart-card">
+				<div class="cart-card hide">
 					<div class="cart-head"> 
 						<table>
 							<tr>
