--- a/public/app/partials/my/cart.html
+++ b/public/app/partials/my/cart.html
@@ -22,10 +22,19 @@
 								<td class="cart-prod-qty">
 									<div class="input-group input-group-sm">
 										<input type="number" min="1" value="1" class="form-control">
-										<span class="input-group-addon">x Php {{cartItem.price | currency:"":0}}</span>
+										<span class="input-group-addon" ng-if="!cartItem.isOnSale">x Php {{cartItem.price | currency:"":0}}</span>
+										<span class="input-group-addon" ng-if="cartItem.isOnSale">x Php {{cartItem.saleprice | currency:"":0}}</span>
 									</div>
 								</td>
-								<td class="cart-prod-total">Php {{cartItem.price | currency:"":0}}</td>
+								<td class="cart-prod-total">
+									<div ng-if="cartItem.isOnSale">
+										<div class="price-sale">Php {{cartItem.saleprice | currency:"":0}}</div>
+										<div class="price-orig">{{cartItem.sale.off}}% off <span>Php {{cartItem.price | currency:"":0}}</span></div>
+									</div>
+									<div ng-if="!cartItem.isOnSale">
+										Php {{cartItem.price | currency:"":0}}
+									</div>
+								</td>
 								<td class="cart-prod-remove"><a>x</a></td>
 							</tr> 
 						</table>
