--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,6 +13,7 @@ html(ng-app='starterApp')
         link(rel='stylesheet', href='/assets/stylesheets/misc.css')
         link(rel='stylesheet', href='/assets/stylesheets/animations.css')
         script(src='/assets/javascript/lodash.js')
+        script(src='/assets/javascript/moment.min.js')
         script(src='/assets/javascript/jquery-1.12.3.min.js')
         script(src='/assets/javascript/chosen.jquery.min.js')
         script(src='/assets/javascript/angular.min.js')
