--- a/public/app/partials/my/cart.html
+++ b/public/app/partials/my/cart.html
@@ -14,7 +14,7 @@
 					</div>
 					<div class="cart-body">
 						<table class="table">
-							<tr ng-repeat="cartItem in storeCart.cartItems">
+							<tr ng-repeat="cartItem in storeCart.cartItems" class="fx-slide">
 								<td class="cart-prod-img">
 									<img ng-src="/uploads/{{storeCart._id}}/products/md/{{cartItem.images[0].img1 || cartItem.images[0].img2 || cartItem.images[0].img3 || cartItem.images[0].img4 || 'none.jpg'}}">
 								</td>
@@ -35,7 +35,7 @@
 										Php {{cartItem.price | currency:"":0}}
 									</div>
 								</td>
-								<td class="cart-prod-remove"><a>x</a></td>
+								<td class="cart-prod-remove"><a href="#" ng-click="removeCartItem(cartItem.cartid, $parent.$index, $index)">x</a></td>
 							</tr> 
 						</table>
 					</div>
