--- a/public/assets/stylesheets/styles.css
+++ b/public/assets/stylesheets/styles.css
@@ -26,6 +26,9 @@ table {
 	padding: 0;
 	margin: 0;
 }
+a, a:hover {
+	text-decoration: none;
+}
 .homeTable { 
 	text-shadow: 0 1px 1px #000;
 	margin-top: 200px;
@@ -159,6 +162,9 @@ table {
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+}
+.product-card .product-meta i {
+	font-size: 11px; 
 }
 .product-card .product-price {
 	font-size: 14px; 
