--- a/public/app/partials/home.html
+++ b/public/app/partials/home.html
@@ -36,13 +36,13 @@
 						</a>
 						<div class="product-meta clearfix">
 							<div class="product-price">Php <span>{{objProduct.price | currency:"":0}}</span></div>
-							<a class="product-view">
+							<a href="/p/{{objProduct.prodid}}" class="product-view">
 								<i class="glyphicon glyphicon-share-alt"></i> View
 							</a>
-							<a class="product-like" ng-if="!objProduct.inCartItem">
+							<a href="/p/{{objProduct.prodid}}" class="product-like" ng-if="!objProduct.inCartItem">
 								<i class="fa fa-cart-plus"></i> Cart
 							</a>
-							<a class="product-like product-like-active" ng-if="objProduct.inCartItem">
+							<a href="/my/cart/{{objProduct.store.id}}" class="product-like product-like-active" ng-if="objProduct.inCartItem">
 								<i class="fa fa-cart-plus"></i> Cart
 							</a>
 							<a class="product-wishlist product-wishlist-active" ng-if="objProduct.isWishListed" ng-click="removeFromWishlist(objProduct._id)">
