--- a/public/app/partials/my/cartview.html
+++ b/public/app/partials/my/cartview.html
@@ -8,7 +8,7 @@
 							<tr>
 								<td class="cart-head-img">
 									<a href="/@{{objStore.store.url}}">
-										<img ng-src="{{objStore.store.avatar ? '/uploads/' + objStore._id + '/' + objStore.store.avatar : '/uploads/none.jpg'}}">
+										<img ng-src="{{objStore.store.avatar != 'none.jpg' ? '/uploads/' + objStore._id + '/' + objStore.store.avatar : '/uploads/none.jpg'}}">
 									</a>
 								</td>
 								<td class="cart-head-name"><a href="/@{{objStore.store.url}}">{{objStore.store.name}}</a></td>
