--- a/public/app/partials/stores/view.html
+++ b/public/app/partials/stores/view.html
@@ -31,12 +31,15 @@
 							<img ng-src="/uploads/{{objProd.store.id}}/products/md/{{objProd.images[0].img1 || objProd.images[0].img2 || objProd.images[0].img3 || objProd.images[0].img4 || 'none.jpg'}}">
 						</a>
 						<div class="product-meta clearfix">
-							<div class="product-price">PHP <span>{{objProd.price}}</span></div>
-							<a class="product-view">
+							<div class="product-price">PHP <span>{{objProd.price | currency:"":0}}</span></div>
+							<a href="/p/{{objProd.prodid}}" class="product-view">
 								<i class="glyphicon glyphicon-share-alt"></i> View
 							</a>
-							<a class="product-like">
-								<i class="glyphicon glyphicon-heart"></i> 100
+							<a href="/p/{{objProd.prodid}}" class="product-like" ng-if="!objProd.inCartItem">
+								<i class="fa fa-cart-plus"></i> Cart
+							</a>
+							<a href="/my/cart/{{objProd.store.id}}" class="product-like product-like-active" ng-if="objProd.inCartItem">
+								<i class="fa fa-cart-plus"></i> Cart
 							</a>
 							<a class="product-wishlist product-wishlist-active" ng-if="objProd.isWishListed" ng-click="removeFromWishlist(objProd._id)">
 								<i class="glyphicon glyphicon-gift"></i> Wishlist
