--- a/public/app/partials/my/cart.html
+++ b/public/app/partials/my/cart.html
@@ -42,7 +42,7 @@
 									</div>
 								</td>
 								<td class="cart-prod-remove">
-									<a href="#" ng-click="removeCartItem(cartItem.cartid, $parent.$index, $index)">
+									<a href="#" ng-click="removeCartItem(cartItem, $parent.$index, $index)">
 										<i class="glyphicon glyphicon-trash"></i>
 									</a>
 								</td>
