--- a/public/app/partials/home.html
+++ b/public/app/partials/home.html
@@ -27,6 +27,20 @@
 <div id="homeProducts" ng-if="rs_me">
 	<div class="page-wrap" ng-if="isLoggedIn && rs_me && !rs_isManage">
 		<div class="page-body" ng-if="homeProducts.length > 0">
+
+			<div class="row" ng-if="isLoggedIn && !rs_isManage"> 
+				<div class="col-sm-12">
+					<ul id="subNav" class="clearfix">
+						<li><a ng-class="{'active' : rs_pagePath == ''}" href="/">Home</a></li>
+						<li><a ng-class="{'active' : rs_pagePath == 'wishlist'}" href="/my/wishlist">Wishlist</a></li>
+						<li><a ng-class="{'active' : rs_pagePath == 'orders'}" href="/my/orders">Orders</a></li>
+						<li><a ng-class="{'active' : rs_pagePath == 'cart'}" href="/my/cart">Cart</a></li>
+						<li><a ng-class="{'active' : rs_pagePath == 'profile'}" href="/my/profile">Profile</a></li>
+						<li><a href="/logout">Logout</a></li>
+					</ul>
+				</div>
+			</div> 
+
 			<div class="row"> 
 				<div class="col-md-3 col-sm-4" ng-repeat="objProduct in homeProducts">
 					<div class="product-card product-card-cool product-card-cool-sm"> 
