--- a/public/app/partials/includes/header.html
+++ b/public/app/partials/includes/header.html
@@ -1,9 +1,9 @@
 <div class="page-head" ng-if="isLoggedIn && rs_isManage">
 	<div class="row">
-		<div class="col-sm-4">
-			<a id="mainLogo" class="cp" ng-click="manageout()">7-11</a>
+		<div class="col-sm-2">
+			<a id="mainLogo" class="cp" ng-click="manageout()">711</a>
 		</div>
-		<div class="col-sm-8">
+		<div class="col-sm-10">
 			<ul id="mainVav">
 				<li><a href="/manage/products/add" class="btn btn-primary">Add New</a></li>
 				<li><a ng-class="{'active' : rs_pagePath == 'products'}" href="/manage/products">Product</a></li>
@@ -18,18 +18,28 @@
 
 <div class="page-head" ng-if="isLoggedIn && !rs_isManage">
 	<div class="row">
-		<div class="col-xs-8">
-			<a id="mainLogo" class="cp" ng-click="manageout()">7-11</a>
+		<div class="col-sm-2">
+			<a id="mainLogo" class="cp" ng-click="manageout()">711</a>
 		</div>
-		<div class="col-xs-4 text-right">
-			<a ng-click="manageStore()" class="btn btn-primary mt10" ng-if="rs_hasStore">Manage Store</a>
-			<a href="/manage/settings" class="btn btn-primary mt10" ng-if="!rs_hasStore">Create Store</a>
+		<div class="col-sm-10">
+			<ul id="mainVav">
+				<li>
+					<a ng-click="manageStore()" class="btn btn-primary" ng-if="rs_hasStore">Manage Store</a>
+					<a href="/manage/settings" class="btn btn-primary" ng-if="!rs_hasStore">Create Store</a>
+				</li>
+				<li><a ng-class="{'active' : rs_pagePath == ''}" href="/">Home</a></li>
+				<li><a ng-class="{'active' : rs_pagePath == 'wishlist'}" href="/my/wishlist">Wishlist</a></li>
+				<li><a ng-class="{'active' : rs_pagePath == 'orders'}" href="/my/orders">Orders</a></li>
+				<li><a ng-class="{'active' : rs_pagePath == 'cart'}" href="/my/cart">Cart</a></li>
+				<li><a ng-class="{'active' : rs_pagePath == 'profile'}" href="/my/profile">Profile</a></li>
+				<li><a href="/logout">Logout</a></li>
+			</ul> 
 		</div>
 	</div>
 </div> 
 
  
-<div class="row" ng-if="isLoggedIn && !rs_isManage"> 
+<div class="row hide" ng-if="isLoggedIn && !rs_isManage"> 
 	<div class="col-sm-12">
 		<ul id="subNav" class="clearfix">
 			<li><a ng-class="{'active' : rs_pagePath == ''}" href="/">Home</a></li>
