--- a/public/assets/stylesheets/styles.css
+++ b/public/assets/stylesheets/styles.css
@@ -107,8 +107,8 @@ a, a:hover {
 }
 
 #subNav { 
-	margin: 0;
-	padding: 20px 20px 0px;
+	margin: 0 0 20px;
+	padding: 0;
 	background: #f1f5f8;
 }
 #subNav li {
