--- a/public/app/partials/my/wishlist.html
+++ b/public/app/partials/my/wishlist.html
@@ -1,7 +1,7 @@
 <div class="page-wrap">
 	<div class="page-body" ng-if="arrWishlists">
 		
-		<div class="row" ng-if="isLoggedIn && !rs_isManage"> 
+		<div class="row" ng-if="rs_isLoggedIn && !rs_isManage"> 
 			<div class="col-sm-12">
 				<ul id="subNav" class="clearfix">
 					<li><a ng-class="{'active' : rs_pagePath == ''}" href="/">Home</a></li>
