--- a/public/app/partials/includes/header.html
+++ b/public/app/partials/includes/header.html
@@ -1,4 +1,4 @@
-<div class="page-head" ng-if="isLoggedIn && rs_isManage">
+<div class="page-head" ng-if="rs_isLoggedIn && rs_isManage">
 	<div class="row">
 		<div class="col-sm-2">
 			<a id="mainLogo" class="cp" ng-click="manageout()">711</a>
@@ -16,7 +16,7 @@
 	</div>
 </div>
 
-<div class="page-head" ng-if="isLoggedIn && !rs_isManage">
+<div class="page-head" ng-if="rs_isLoggedIn && !rs_isManage">
 	<div class="row">
 		<div class="col-sm-2">
 			<a id="mainLogo" class="cp" ng-click="manageout()">711</a>
@@ -32,14 +32,14 @@
 				<li><a ng-class="{'active' : rs_pagePath == 'orders'}" href="/my/orders">Orders</a></li>
 				<li><a ng-class="{'active' : rs_pagePath == 'cart'}" href="/my/cart">Cart</a></li>
 				<li><a ng-class="{'active' : rs_pagePath == 'profile'}" href="/my/profile">Profile</a></li>
-				<li><a href="/logout">Logout</a></li>
+				<li><a ng-click="logout()" class="cp">Logout</a></li>
 			</ul> 
 		</div>
 	</div>
 </div> 
 
  
-<div class="row hide" ng-if="isLoggedIn && !rs_isManage"> 
+<div class="row hide" ng-if="rs_isLoggedIn && !rs_isManage"> 
 	<div class="col-sm-12">
 		<ul id="subNav" class="clearfix">
 			<li><a ng-class="{'active' : rs_pagePath == ''}" href="/">Home</a></li>
@@ -52,7 +52,7 @@
 	</div>
 </div> 
 
-<div class="page-wrap mb0" ng-if="isLoggedIn && !rs_isManage && !rs_hasProfile">
+<div class="page-wrap mb0" ng-if="rs_isLoggedIn && !rs_isManage && !rs_hasProfile">
 	<div class="page-body">
 		<div class="alert alert-danger mb0">
 			Please complete your <a href="/my/profile">profile here</a>.
