SEO and image type validation

--- a/public/app/partials/products/edit.html
+++ b/public/app/partials/products/edit.html
@@ -155,6 +155,11 @@
 											</div>
 										</div>   
 									</div> 
+									<div class="row mt10" ng-if="isInvalidImage">
+										<div class="col-md-12">
+											<div class="mb0 alert alert-danger padTB10">{{isInvalidError}}</div>
+										</div>
+									</div>
 								</div>
 							</div>
 							<div class="form-card pad20">
