--- a/public/app/partials/products/add.html
+++ b/public/app/partials/products/add.html
@@ -146,13 +146,18 @@
 											</div>
 										</div>   
 									</div> 
+									<div class="row mt10" ng-if="isInvalidImage">
+										<div class="col-md-12">
+											<div class="mb0 alert alert-danger padTB10">{{isInvalidError}}</div>
+										</div>
+									</div>
 								</div>
 							</div>
 							<div class="form-card pad20">
 								<div class="row">
 									<div class="col-md-12">
 										<p ng-if="isAddPostSuccess" class="alert alert-success">Success</p>
-										<p ng-if="isAddPostError" class="alert alert-success">Error</p>
+										<p ng-if="isAddPostError" class="alert alert-danger">Error</p>
 									</div>
 								</div>
 								<div class="row">
