--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,11 @@
 doctype html
 html(ng-app='starterApp')
     head
-        title 7 Eleven
+        title= meta.title
+        meta(name='viewport', content='width=device-width, initial-scale=1.0')
+        meta(name="description", content= meta.description)
+        meta(name="keywords", content= meta.keywords)
+        meta(name="author", content= meta.author)
         base(href='/')
         link(rel='stylesheet', href='/assets/stylesheets/bootstrap.css')
         link(rel='stylesheet', href='/assets/stylesheets/animate.min.css')
